--- a/src/frontend/supporting/navbar.html
+++ b/src/frontend/supporting/navbar.html
@@ -1,10 +1,10 @@
 <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item mx-1" href="/">
-      <p>Start</p>
+      <p>StatMon</p>
     </a>
-    <a class="navbar-item mx-1" href="/1">
-      <p>#1</p>
+    <a class="navbar-item mx-1" href="/machines">
+      <p>Machines</p>
     </a>
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" onclick="toggle_navmenu(this);" id="navbar_burger">
       <span aria-hidden="true"></span>
@@ -14,8 +14,8 @@
   </div>
   <div class="navbar-menu" id="navbar_menu">
     <div class="navbar-start">
-      <a class="navbar-item mx-1" href="/2">
-        <p>#2</p>
+      <a class="navbar-item mx-1" href="/machines.admin">
+        <p>Machine Admin</p>
       </a>
     </div>
     <div class="navbar-end">
