--- a/src/frontend/supporting/navbar.html
+++ b/src/frontend/supporting/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item mx-1" href="/">
-      <p>StatMon</p>
+      <img src="favicon.ico" width="100%" height="100%">
     </a>
     <a class="navbar-item mx-1" href="/machines">
       <p>Machines</p>
